Spacing issues addresses

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
     color: white;
     height: 100vh;
     max-width: 1600px;
-    /* filter: brightness(0.8); */
-}
+    filter: brightness(0.8)
+}   
 
 .alpha-container {
     display: flex;
@@ -32,6 +32,7 @@ h1 {
     left: -235px;
     top: 250px;
     margin: 0;
+    filter: blur(4px);
 }
 
 #author {
@@ -50,7 +51,7 @@ h1 {
 }
 
 h3 {
-    margin: 30px 0 5px 0;
+    margin: 30px 50px 10px;
     font-size: 1.5em;
     font-weight: 100;
 }
@@ -134,10 +135,18 @@ h3 {
     width: 200px;
 }
 
+.slider-top {
+    margin: 10px 0 5px;
+}
+
 .number-box {
     width: 70px;
-    margin-top: 4px;
+    margin-top: 8px;
     font-size: 1.1em;
+}
+
+#race-length-container {
+    margin-top: -20px;
 }
 
 .results-container {
